--- a/style.css
+++ b/style.css
@@ -167,7 +167,7 @@ a {
     display: flex;
     justify-content: center;
 
-    background-image: url(/images/bg-intro-mobile.svg);
+    background-image: url(images/bg-intro-mobile.svg);
     background-repeat: no-repeat;
     background-position-y: -4rem;
 
